# YURRGOHT_ENGINE

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  core  current_notes.txt  gfxrecon_capture_20250101T002642.gfxr  static_cmd_backup.txt  vkvia.html  vulkaninfo.html  workspace.sln
source/: CMakeLists.txt
source/config/: engine.yaml
source/editor/: CMakeLists.txt  editor.cpp  editor.h
source/editor/asset/: asset_ui.cpp  asset_ui.h
source/editor/base/: editor_ui.cpp  editor_ui.h  folder_tree_ui.cpp  folder_tree_ui.h
source/editor/global/: editor_context.cpp  editor_context.h
source/editor/log/: log_ui.cpp  log_ui.h
source/editor/menu/: menu_ui.cpp  menu_ui.h
source/editor/property/: property_ui.cpp  property_ui.h
source/editor/scene/: scene_ui.cpp  scene_ui.h
source/editor/simulation/: simulation_ui.cpp  simulation_ui.h
source/editor/tool/: tool_ui.cpp  tool_ui.h
source/editor/world/: world_ui.cpp  world_ui.h
source/engine/: CMakeLists.txt  engine.cpp  engine.h
source/engine/core/base/: macro.h
source/engine/core/color/: color.cpp  color.h
source/engine/core/config/: config_manager.cpp  config_manager.h
source/engine/core/event/: event_system.cpp  event_system.h
source/engine/core/log/: log_system.cpp  log_system.h
source/engine/core/math/: bounding_box.cpp  bounding_box.h  math_util.cpp  math_util.h  transform.cpp  transform.h
source/engine/core/vulkan/: vulkan_rhi.cpp  vulkan_rhi.h  vulkan_util.cpp  vulkan_util.h
source/engine/function/framework/component/: a_meta_multimap.hpp  animation_component.cpp  animation_component.h  animator_component.cpp  animator_component.h  box_collider_component.cpp  box_collider_component.h  camera_component.cpp  camera_component.h  capsule_collider_component.cpp  capsule_collider_component.h  collider_component.cpp  collider_component.h  component.cpp  component.h  cylinder_collider_component.cpp  cylinder_collider_component.h  directional_light_component.cpp  directional_light_component.h  light_component.cpp  light_component.h  mesh_collider_component.cpp  mesh_collider_component.h  point_light_component.cpp  point_light_component.h  rigidbody_component.cpp  rigidbody_component.h  script_component.cpp.UNUSED  script_component.h.UNUSED  skeletal_mesh_component.cpp  skeletal_mesh_component.h  sky_light_component.cpp  sky_light_component.h  sphere_collider_component.cpp  sphere_collider_component.h  spot_light_component.cpp  spot_light_component.h  static_mesh_component.cpp  static_mesh_component.h  transform_component.cpp  (+1 more)
source/engine/function/framework/entity/: entity.cpp  entity.h
source/engine/function/framework/scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
source/engine/function/framework/world/: world.cpp  world.h  world_manager.cpp  world_manager.h
source/engine/function/global/: engine_context.cpp  engine_context.h
source/engine/function/physics/: physics_settings.h  physics_system.cpp  physics_system.h
source/engine/function/render/: debug_draw_manager.cpp  debug_draw_manager.h  render_data.cpp  render_data.h  render_system.cpp  render_system.h  window_system.cpp  window_system.h
source/engine/function/render/pass/: brdf_lut_pass.cpp  brdf_lut_pass.h  directional_light_shadow_pass.cpp  directional_light_shadow_pass.h  filter_cube_pass.cpp  filter_cube_pass.h  main_pass.cpp  main_pass.h  outline_pass.cpp  outline_pass.h  pick_pass.cpp  pick_pass.h  point_light_shadow_pass.cpp  point_light_shadow_pass.h  postprocess_pass.cpp  postprocess_pass.h  render_pass.cpp  render_pass.h  spot_light_shadow_pass.cpp  spot_light_shadow_pass.h  ui_pass.cpp  ui_pass.h
source/engine/function/scripting/: cs_scripting.cpp  cs_scripting.h  cs_scriting.cpp  script_manager.cpp  script_manager.h
source/engine/function/scripting/cs_interface/: Program.cs
source/engine/function/scripting/script_interface/: Program.cs  script_interface.csproj
source/engine/platform/file/: file_system.cpp  file_system.h
source/engine/platform/string/: string_util.cpp  string_util.h
source/engine/platform/timer/: timer.cpp  timer.h
source/engine/resource/asset/: animation.cpp  animation.h  asset_manager.cpp  asset_manager.h  material.cpp  material.h  skeletal_mesh.cpp  skeletal_mesh.h  skeleton.cpp  skeleton.h  static_mesh.cpp  static_mesh.h  texture_2d.cpp  texture_2d.h  texture_cube.cpp  texture_cube.h
source/engine/resource/asset/base/: asset.cpp  asset.h  bone.cpp  bone.h  mesh.cpp  mesh.h  script.cpp  script.h  sub_mesh.cpp  sub_mesh.h  texture.cpp  texture.h  url.cpp  url.h
source/engine/resource/asset/importer/: gltf_importer.cpp  gltf_importer.h
source/engine/resource/serialization/: serialization.h
source/engine/resource/shader/: TBuiltInResource_default.h  shader_manager.cpp  shader_manager.h
source/project_source/: application_entity.cpp  application_entity.h  main.cpp
source/project_source/resource/: bamboo.rc  yurrgoht.rc
template/common/: CMakeLists.txt
template/common/asset/car/: anim_AllAnim.anim  anim_Arranque.anim  anim_Idle.anim  anim_SpawnClean.anim  mat_Mat_Robot.mat  skl_car_0.skl  skm_car.skm  tex_car_1.tex  tex_car_2.tex  tex_car_3.tex
template/common/asset/engine/layout/: default.layout
template/common/asset/engine/material/: mat_default.mat
template/common/asset/engine/mesh/floor/: mat_Floor.mat  sm_floor.sm  tex_floor_0.tex  tex_floor_1.tex  tex_floor_2.tex
template/common/asset/engine/mesh/primitive/: sm_cone.sm  sm_cylinder.sm  sm_plane.sm  sm_sphere.sm
template/common/asset/engine/shader/: box_blur.frag-13342005233.spv  brdf_lut.frag-13342005233.spv  debug_draw.frag-13342005233.spv  deferred_lighting.frag-13342005233.spv  forward_lighting.frag-13342005233.spv  gbuffer.frag-13342005233.spv  include.txt  outline_color_grading.frag-13342005233.spv  prefilter.frag-13342005233.spv  spot_light_shadow.frag-13342005233.spv
template/common/asset/engine/world/: basic.world  empty.world
template/common/asset/world/: car.world  physics.world
template/common/config/: engine.yaml
template/common/source/: application_entity.cpp  main.cpp
(+58 files in other folders)
